TRYING to fix BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -268,13 +268,6 @@ margin: 0 -40% 0 -60%;
 }
 
 
-@media handheld {
-  html{
-    background-color: rgb(57,57,57);
-  }
-}
-
-
 @media (max-width: 720px){
   .ppp-container {
     margin: 15px 0;
